from 2.5.11 to 2.5.12
- documenting in man page the limitation of -[ and -] options concerning
  the maximum line length that could be used in a listing file. This
  limitation was only described in doc/Limitations.html
- dar now aborts if a line exceeding 20479 bytes is met in a listing file

from 2.5.10 to 2.5.11
- minor feature: displays the archive header which is never ciphered and
  aborts. This feature is activated while listing archive content and
  adding the -aheader option. This brings the side effect to invert two
  lines in the archive summary (dar -l archive -q) "catalogue size" and
  "user comment".
- adding date format info for -w option in "dar_manager -h" usage help
- fixed several mistakes in tools.cpp leading compilation to fail under
  certain environments
- fixed a typo in filesystem.cpp and portability issue that lead
  compilation to fail under openbsd 6.0
- fixed bug in the filtering mechanism relying on file listing (-[ and
  -] options) that could not find an entry in the listing upon certain
  condition leading a file not being excluded as requested or not
  included as requested

from 2.5.9 to 2.5.10
- fixed bug: -r option (only more recent overwriting policy) was
  considering a file to be more recent when it had the exact same date as
  the file in place.
- updating documentation about requirements for compiling dar from sources
- fixed bug: bug met when restoring of a file that has the immutable
  flag set. Dar/libdar failed restoring such file in the context of
  differential/incremental backup. The fix consists of the removal of the
  immutable flag from filesystem before restoring the new version of the
  file's data, then setting back the immutable flag afterward.
- updating FAQ with description of the way dar uses lzo compression
  compared to the lzop program
- fixed bug: aborting an archive was leading to an unreadable archive in
  direct mode, most of the time when strong encryption was used